make file directory. add cwd

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,6 @@ project(study_c C)
 set(CMAKE_C_STANDARD 99)
 
 add_executable(study_c main.c)
-add_executable(file file.c)
+
+add_executable(file file/file.c)
+add_executable(cwd file/cwd.c)
