--- a/libcurl/CMakeLists.txt
+++ b/libcurl/CMakeLists.txt
@@ -9,3 +9,8 @@ target_link_libraries(libcurl_https_get_request
 add_executable(libcurl_smtp_mime libcurl_smtp_mime.c)
 target_link_libraries(libcurl_smtp_mime
         curl)
+
+add_executable(libcurl_urlencode libcurl_urlencode.c)
+target_link_libraries(libcurl_urlencode
+        curl)
+
